--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.password=postgres
 spring.datasource.username=postgres
 spring.jpa.hibernate.ddl-auto=update
+spring.rabbitmq.addresses=
+broker.queue.processing.name=exchange.processing
